objects/LMS_Install_Site__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Install Sites</relationshipLabel>
        <relationshipName>Install_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AddressLine1__c</fullName>
        <label>AddressLine1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine2__c</fullName>
        <label>AddressLine2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine3__c</fullName>
        <label>AddressLine3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Install Site</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Install Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>